[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_minipack"
version = "1.0.0"
authors = [
    {name = "Peer de Bakker", email = "pde-bakk@student.codam.nl"}
]
description = "How to create a package in python."
readme = "README.md"
license = { file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Students",
        "Topic :: Education",
        "Topic :: HowTo",
        "Topic :: Package",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/42pde-bakk/python_modules/tree/module02/ex04"
"Bug Tracker" = "https://github.com/42pde-bakk/python_Modules/issues"
